conf/iptables.rules
# cf. Debian Wiki
# date: 2013-03-07
*filter

# Allows all loopback (lo0) traffic and drop all traffic to 127/8 that doesn't use lo0
-A INPUT -i lo -j ACCEPT
-A INPUT ! -i lo -d 127.0.0.0/8 -j REJECT

# Accepts all established inbound connections
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
#inferior version:
#-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

# Allows HTTP and HTTPS connections from anywhere (the normal ports for websites)
-A INPUT -p tcp --dport 80 -j ACCEPT
-A INPUT -p tcp --dport 443 -j ACCEPT

# allow SSH
-A INPUT -p tcp -m state --state NEW --dport 8022 -j ACCEPT

# allow ping
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT

# log iptables denied calls (access via 'dmesg' command)
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7

# Samba
-A INPUT -p tcp -m tcp --dport 139 -j ACCEPT
-A INPUT -p udp -m udp --dport 137:138 -j ACCEPT
#-A INPUT -p tcp --dport 445 -j ACCEPT # for Win2k/XP

# RDP
-A INPUT -p tcp -m tcp --dport 3389 -j ACCEPT

# ssh reverse tunnels
-A INPUT -p tcp -m tcp --dport 20001:20023 -j ACCEPT

#------------------------------
## mosh [UDP]
-A INPUT -p udp --dport 60000:61000 -j ACCEPT
## Jenkins
-A INPUT -p tcp --dport 8080 -j ACCEPT
## Ruby
-A INPUT -p tcp --dport 3000 -j ACCEPT
-A INPUT -p tcp --dport 4000 -j ACCEPT
-A INPUT -p tcp --dport 9292 -j ACCEPT
## ngIRCd
# -A INPUT -p tcp --dport 6667:6669 -j ACCEPT
## vSphere
# -A INPUT -p tcp --dport 902:903 -j ACCEPT
## commafeed
# -A INPUT -p tcp --dport 8082 -j ACCEPT
# -A INPUT -p tcp --dport 8043 -j ACCEPT


#------------------------------
# Reject all other inbound - default deny unless explicitly allowed policy:
-A INPUT -j REJECT
-A FORWARD -j REJECT
# Allows all outbound traffic
-A OUTPUT -j ACCEPT

COMMIT

# vim: ft=sh
